--- a/templates/bit/more_posts.html
+++ b/templates/bit/more_posts.html
@@ -1,3 +1,3 @@
 <button class="btn btn-large btn-primary btn-block" id="moreNews" type="button">Больше записей</button>
-<input type="hidden" name="offset" id="offsetValue" value="{{ offset }}"/>
-<input type="hidden" name="limit" id="limitValue" value="{{ limit }}"/>
+<input type="hidden" name="offset" id="offsetValue" value="{{ offset }}" data-bind="value: offset"/>
+<input type="hidden" name="limit" id="limitValue" value="{{ limit }}" data-bind="value: limit"/>
