--- a/apps/api/v2/templates/api/v2/index.html
+++ b/apps/api/v2/templates/api/v2/index.html
@@ -45,7 +45,7 @@
             <h2 class="page-header">
                 Блог
             </h2>
-            Получение списка постов из базы. В строке запроса поддерживаются ключи year, month limit и offset. По умолчанию limit = 20, offset = 0, год и месяц не определены.
+            Получение списка постов из базы. В строке запроса поддерживаются ключи year, month, limit и offset. По умолчанию limit = 20, offset = 0, год и месяц не определены.
             <dl class="dl-horizontal">
                 <dt>URL</dt>
                 <dd>
