blog view model moved to coffee file

--- a/apps/news/templates/news/post.html
+++ b/apps/news/templates/news/post.html
@@ -48,6 +48,9 @@
                         }">
 
             </div>
+            <input type="hidden" name="offset" id="offsetValue" value="{{ offset }}"/>
+            <input type="hidden" name="limit" id="limitValue" value="{{ limit }}"/>
+            <input type="hidden" name="seed" id="seedValue" value="{{ seed }}"/>
             <!--/noindex-->
         </div>
     </div>
