--- a/apps/news/templates/news/blog_model.html
+++ b/apps/news/templates/news/blog_model.html
@@ -20,55 +20,7 @@
 </script>
 
 <script>
-    function BlogViewModel() {
-        var self = this;
-
-        this.seed  = {{ seed }};
-        this.limit  = {{ limit }};
-        this.offset  = {{ offset }};
-        this.hideAddButton  = false;
-
-        this.blogPosts = ko.mapping.fromJS([]);
-
-        this.getPosts = function() {
-            service_call('get', '{{ url_for('api.v2.posts_json') }}', { "offset": self.offset, "limit": self.limit }, function(data) {
-                self.successfullyRetrievedPosts(data.result);
-            });
-        };
-
-        var mapping = {
-            key: function (item) {
-                return ko.utils.unwrapObservable(item.id);
-            }
-        };
-
-        this.successfullyRetrievedPosts = function(posts) {
-            var unmapped = ko.mapping.toJS(self.blogPosts);
-            if(unmapped.length > 0) {
-                Array.prototype.push.apply(unmapped, posts);
-                ko.mapping.fromJS(unmapped, mapping, self.blogPosts);
-            } else {
-                ko.mapping.fromJS(posts, mapping, self.blogPosts);
-            }
-
-            self.offset += self.limit;
-            self.limit = self.seed;
-            self.hideAddButton = posts.length < self.limit;
-        };
-
-        this.postProcessingLogic = function(elements) {
-            $(elements).each(function(idx, elem) {
-                formatElementWith($(elem).find("span.shortDateFormat"), 'LL');
-            });
-
-            if(this.hideAddButton) {
-                $("button#moreNews").remove();
-            }
-        }
-    }
-
-    vm = new BlogViewModel();
+    vm = new window.BlogViewModel();
     vm.getPosts();
     ko.applyBindings(vm);
-
 </script>
