--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 {% autoescape true %}
 {% strip %}
-<html class="{% block html_class %}{{html_class}}{% endblock %}" lang="en">
+<html class="{% block html_class %}{{html_class}}{% endblock %}" lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Сайт о программировании, веб технологиях, блог, можно загружить какие-то утилиты. Есть переводы документации апача.">
     <title>
       # block title
         # if title
