--- a/templates/bit/top_bar.html
+++ b/templates/bit/top_bar.html
@@ -11,7 +11,7 @@
                 {{ config.CONFIG_DB.brand_name }}
             </a>
 
-            <div class="nav-collapse collapse">
+            <nav class="nav-collapse collapse">
                 <ul class="nav">
                     {% for item in config.SITE %}
                         <li {% if item["id"] == current_id %}class="active"{% endif %}>
@@ -25,7 +25,7 @@
                 <ul class="nav pull-right">
                     # include 'bit/user_menu.html'
                 </ul>
-            </div>
+            </nav>
         </div>
     </div>
 </div>
