--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Сайт о программировании, веб технологиях, блог, можно загружить какие-то утилиты. Есть переводы документации апача.">
+    <meta name="description" content="Сайт об обычном программировании и веб технологиях, вроде apache, парсера и других. Есть инструменты для вычисления хэшей и восстановления строк">
     <title>
       # block title
         # if title
