--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Сайт об обычном программировании и веб технологиях, вроде apache, парсера и других. Есть инструменты для вычисления хэшей и восстановления строк">
     <meta name="keywords" content="apache,mod_rewrite,перевод,документация,хэш,md5,sha1,восстановление,logviewer,программирование,веб,примеры,кода">
+    <meta name="author" content="Александр Егоров">
     <title>
       # block title
         # if title
