meta http-equiv="content-language" added

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Сайт об обычном программировании и веб технологиях, вроде apache, парсера и других. Есть инструменты для вычисления хэшей и восстановления строк">
     <meta name="keywords" content="apache,mod_rewrite,перевод,документация,хэш,md5,sha1,восстановление,logviewer,программирование,веб,примеры,кода">
     <meta name="author" content="Александр Егоров">
+    <meta http-equiv="content-language" content="ru">
     <title>
       # block title
         # if title
