dates displaying fix

--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -99,13 +99,13 @@
               </td>
               <td>{{user_db.email}}</td>
               <td>
-                <abbr title="{{user_db.created_utc}}">
-                  {{user_db.created_ago}}
+                <abbr title="{{user_db.created}}" class="date-from-now">
+                  {{user_db.created}}
                 </abbr>
               </td>
               <td>
-                <abbr title="{{user_db.modified_utc}}">
-                  {{user_db.modified_ago}}
+                <abbr title="{{user_db.modified}}" class="date-from-now">
+                  {{user_db.modified}}
                 </abbr>
               </td>
             </tr>
