--- a/templates/admin/top_bar.html
+++ b/templates/admin/top_bar.html
@@ -4,30 +4,22 @@
 
             <ul class="nav span2">
                 <li>
-                    <a class="brand" href="{{url_for('admin.news.index')}}">
+                    <a class="brand" href="{{url_for('admin_config_update')}}">
                         {{ config.BRAND_NAME }}
                     </a>
                 </li>
             </ul>
 
-            <ul class="nav span7">
-                <li class="dropdown">
-                    <a href="#"
-                       class="dropdown-toggle"
-                       data-toggle="dropdown">
-                        Разделы сайта
-                        <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="{{ url_for('admin.news.index') }}">Блог</a>
-                        </li>
-                        <li>
-                            <a href="{{ url_for('admin.file.index') }}">Файлы</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+            <nav class="nav span7">
+                <ul class="nav">
+                    <li>
+                        <a href="{{ url_for('admin.news.index') }}">Блог</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('admin.file.index') }}">Файлы</a>
+                    </li>
+                </ul>
+            </nav>
 
             <ul class="nav pull-right">
                 <li>
