trying to highlight selected section in admin interface

--- a/templates/admin/top_bar.html
+++ b/templates/admin/top_bar.html
@@ -10,7 +10,7 @@
                 </li>
             </ul>
 
-            <nav class="nav span7">
+            <nav class="nav span7" id="adminka">
                 <ul class="nav">
                     <li>
                         <a href="{{ url_for('admin.news.index') }}">Блог</a>
