style and scripts included into build

--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -8,3 +8,7 @@
 @import "footer";
 @import "signin";
 @import "user";
+@import "shCoreDefault";
+@import "shCoreEclipse";
+@import "tags";
+@import "apache";
