--- a/main/static/src/style/style.less
+++ b/main/static/src/style/style.less
@@ -1,6 +1,7 @@
 @import "../../ext/less/font-awesome/font-awesome";
 @import "../../ext/less/bootstrap/bootstrap";
 @import "../../ext/less/nprogress/nprogress";
+@import "../../ext/less/jquery-ui/base.css";
 
 @import "base";
 @import "variables";
