--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html class="{% block html_class %}{{html_class}}{% endblock %}" lang="en">
+<html class="{% block html_class %}{{html_class}}{% endblock %}" lang="ru">
   <head>
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="Сайт об обычном программировании и веб технологиях, вроде apache, парсера и других. Есть инструменты для вычисления хэшей и восстановления строк">
+    <meta name="keywords" content="apache,mod_rewrite,перевод,документация,хэш,md5,sha1,восстановление,logviewer,программирование,веб,примеры,кода">
+    <meta name="author" content="Александр Егоров">
     <title>
       # block title
         {{title + ' |' if title}}
       # endblock
       {{config.CONFIG_DB.brand_name}}
     </title>
+    <link href="{{ url_for('news.recent_feed') }}"
+      rel="alternate"
+      title="Recent Posts"
+      type="application/atom+xml">
     # include 'bit/style.html'
     # block head
     # endblock
