--- a/main/apps/portfolio/templates/portfolio/apache_document.html
+++ b/main/apps/portfolio/templates/portfolio/apache_document.html
@@ -3,8 +3,8 @@
 {% block content %}
 
     <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span10">
+        <div class="row">
+            <div class="col-md-10">
                 {% if not apache_docs %}
                     {% if doc and doc == 'mod_proxy' %}
                         {{ html | safe }}
@@ -19,7 +19,7 @@
                 {% include 'bit/disqus.html' %}
                 </p>
             </div>
-            <div class="span2">
+            <div class="col-md-2">
 
             </div>
         </div>
