--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -29,7 +29,7 @@
     # include 'bit/announcement.html'
     # block header
     # endblock
-    <div class="container">
+    <div class="container-fluid">
       # include 'bit/notifications.html'
       # block content
       # endblock
