--- a/main/apps/api/v2/templates/api/v2/index.html
+++ b/main/apps/api/v2/templates/api/v2/index.html
@@ -22,7 +22,7 @@
 {% block content %}
 {% strip %}
 <div class="row">
-    <div class="span12">
+    <div class="col-md-12">
         <h1 class="page-header">
             API
         </h1>
