--- a/main/apps/news/templates/news/post.html
+++ b/main/apps/news/templates/news/post.html
@@ -7,8 +7,8 @@
 # endblock
 
 {% block content %}
-    <div class="row-fluid">
-        <div class="span9">
+    <div class="row">
+        <div class="col-md-9">
             <p class="muted"><i class="icon-calendar"></i>&nbsp;<span class="date-from-now">{{ main_post.created }}</span></p>
             {% if content %}
                 {{ content | typo | safe }}
@@ -31,7 +31,7 @@
             </div>
             {% include 'bit/disqus.html' %}
         </div>
-        <div class="span3">
+        <div class="col-md-3">
             <!--noindex-->
             <h4>
                 Из последнего
@@ -42,7 +42,7 @@
                         afterRender: postProcessingLogic
                         }"></dl>
 
-            <div class="span12" data-bind="template: {
+            <div class="col-md-12" data-bind="template: {
                         name: 'morePosts',
                         data: blogPosts
                         }">
