--- a/main/apps/portfolio/templates/portfolio/index.html
+++ b/main/apps/portfolio/templates/portfolio/index.html
@@ -9,12 +9,12 @@
             </small>
         </h1>
     </div>
-    <div class="row-fluid">
-        <div class="span6">
+    <div class="row">
+        <div class="col-md-6">
             <h1>Про апачей</h1>
             {% include 'portfolio/apache_documents_list.html' %}
         </div>
-        <div class="span6">
+        <div class="col-md-6">
             <h1>Загрузки</h1>
             {% include 'portfolio/downloads.html' %}
         </div>
