--- a/main/templates/bit/footer.html
+++ b/main/templates/bit/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer" role="contentinfo">
-  <div class="container">
+  <div class="container-fluid">
     # if current_user.admin
       <p>
         Version: {{config.CURRENT_VERSION_NAME}}
