more bugs fixed

--- a/main/apps/news/templates/news/blog_model.html
+++ b/main/apps/news/templates/news/blog_model.html
@@ -15,6 +15,6 @@
 
 <script id="morePosts" type="text/html">
     <!-- ko ifnot: $parent.hideAddButton -->
-    <button class="btn btn-large btn-primary btn-block" id="moreNews" type="button" data-bind="click: $parent.getPosts">Больше записей</button>
+    <button class="btn btn-default btn-large btn-primary btn-block" id="moreNews" type="button" data-bind="click: $parent.getPosts">Больше записей</button>
     <!-- /ko -->
 </script>
