--- a/main/templates/bit/footer.html
+++ b/main/templates/bit/footer.html
@@ -1,14 +1,7 @@
+{% strip %}
 <footer class="footer" role="contentinfo">
   <div class="container-fluid">
-    # if current_user.admin
-      <p>
-        Version: {{config.CURRENT_VERSION_NAME}}
-        (<time datetime="{{config.CURRENT_VERSION_DATE}}">{{config.CURRENT_VERSION_DATE}}</time>)
-        # if has_json
-          | <a href="/_s/{{request.url.replace(request.host_url, '')}}" target="_blank">View in JSON</a>
-        # endif
-      </p>
-    # endif
-    <p>&copy; 2014 - {{config.CONFIG_DB.brand_name}}</p>
+    <p class="muted">&copy; 2002-2014 - Александр Егоров</p>
   </div>
 </footer>
+{% endstrip %}
