top navigation restored

--- a/main/static/src/style/variables.less
+++ b/main/static/src/style/variables.less
@@ -1,6 +1,12 @@
 @fa-font-path:            "/p/ext/font/font-awesome";
 @icon-font-path:          "/p/ext/font/bootstrap/";
 
+@navbar-default-bg: rgb(104, 148, 216);
+@navbar-default-link-color: white;
+@navbar-default-color: white;
+@navbar-default-link-hover-color: #ddd;
+@navbar-default-link-active-color: #eee;
+
 @footer-height:           (@line-height-computed * 5);
 
 @nprogress-color:         @brand-primary;
