--- a/main/static/src/style/variables.less
+++ b/main/static/src/style/variables.less
@@ -9,5 +9,5 @@
 
 @footer-height:           (@line-height-computed * 5);
 
-@nprogress-color:         @brand-primary;
+@nprogress-color:         rgb(216, 71, 70);
 @nprogress-spinner-top:   @navbar-height + @nprogress-spinner-right;
