--- a/main/templates/bit/social.html
+++ b/main/templates/bit/social.html
@@ -1,10 +1,10 @@
 {% strip %}
 {% if full_uri %}
     &nbsp;&nbsp;&nbsp;
-    <a href="http://twitter.com/home/?status={{ full_uri }}" title="в твиттер"><small><i class="icon-twitter"></i></small></a>&nbsp;&nbsp;
+    <a href="http://twitter.com/home/?status={{ full_uri }}" title="в твиттер"><small><i class="fa fa-twitter"></i></small></a>&nbsp;&nbsp;
     <a href="http://www.facebook.com/sharer.php?u={{ full_uri }}" title="в facebook"
        onclick="window.open(this.href, 'Поделиться ссылкой в facebook', 'width=800,height=300'); return false">
-        <small><i class="icon-facebook"></i></small></a>&nbsp;&nbsp;
+        <small><i class="fa fa-facebook"></i></small></a>&nbsp;&nbsp;
     <small><span id="plusone-div"></span></small>
 {% endif %}
 {% endstrip %}
