search displaying restored

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -21,6 +21,8 @@
     # include 'bit/style.html'
     # block head
     # endblock
+    # block searchscript
+    # endblock
     # include 'bit/analytics.html'
   </head>
 
