tuning bootsrap using variables

--- a/main/static/src/style/variables.less
+++ b/main/static/src/style/variables.less
@@ -11,3 +11,6 @@
 
 @nprogress-color:         rgb(216, 71, 70);
 @nprogress-spinner-top:   @navbar-height + @nprogress-spinner-right;
+
+@list-group-border: #fff;
+@breadcrumb-separator: "→";
