--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -1,12 +1,7 @@
+{% strip %}
 <header class="navbar navbar-default navbar-static-top" role="banner">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand" href="{{url_for('welcome')}}">{{config.CONFIG_DB.brand_name}}</a>
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
@@ -26,3 +21,4 @@
     </nav>
   </div>
 </header>
+{% endstrip %}
