--- a/main/templates/signin.html
+++ b/main/templates/signin.html
@@ -7,34 +7,34 @@
 
 # block content
   <div class="page-header">
-    <h1>{{title}} <small>It only takes 8 seconds</small></h1>
+    <h1>{{title}} <small>Займет только 8 секунд!</small></h1>
   </div>
 
   <div class="row">
     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
       <a class="btn btn-block btn-lg btn-social btn-google" href="{{google_signin_url}}" rel="nofollow">
         <i class="fa fa-google-plus"></i>
-        Sign in with Google
+        Войти с учетной записью Google
       </a>
 
       # if config.CONFIG_DB.has_facebook
         <a class="btn btn-block btn-lg btn-social btn-facebook" href="{{facebook_signin_url}}" rel="nofollow">
           <i class="fa fa-facebook"></i>
-          Sign in with Facebook
+          Войти с учетной записью Facebook
         </a>
       # endif
 
       # if config.CONFIG_DB.has_twitter
         <a class="btn btn-block btn-lg btn-social btn-twitter" href="{{twitter_signin_url}}" rel="nofollow">
           <i class="fa fa-twitter"></i>
-          Sign in with Twitter
+          Войти с учетной записью Twitter
         </a>
       # endif
 
       <div class="checkbox remember">
         <label>
           <input type="checkbox" checked>
-          Keep me signed in
+          Оставаться залогиненным
         </label>
       </div>
     </div>
