--- a/main/templates/feedback.html
+++ b/main/templates/feedback.html
@@ -3,7 +3,7 @@
 
 # block content
   <div class="page-header">
-    <h1>{{title}} <small>Any questions or suggestions are welcome</small></h1>
+    <h1>{{title}} <small>Есть вопросы и предложения? Всегда пожалуйста :)</small></h1>
   </div>
 
   <div class="row">
@@ -15,8 +15,8 @@
         {{forms.textarea_field(form.message, rows=8)}}
         {{forms.email_field(form.email)}}
 
-        <button type="submit" class="btn btn-primary btn-block btn-loading" data-loading-text="Sending Feedback..">
-          Send Feedback
+        <button type="submit" class="btn btn-primary btn-block btn-loading" data-loading-text="Идет отправка ...">
+          Отправить
         </button>
       </form>
     </div>
