--- a/main/templates/profile.html
+++ b/main/templates/profile.html
@@ -14,7 +14,7 @@
       <div class="col-md-4 col-sm-6">
         {{form.csrf_token}}
         <div class="form-group ">
-          <label class="control-label" for="username">Username</label>
+          <label class="control-label" for="username">Логин</label>
           <input id="username" class="form-control" name="username" type="text" value="{{user_db.username}}" readonly="readonly">
         </div>
         {{forms.text_field(form.name, autofocus=True)}}
@@ -22,12 +22,12 @@
       </div>
       <div class="col-md-2 col-sm-3">
         <div class="form-group">
-          <label class="control-label">Avatar</label>
+          <label class="control-label">Аватар</label>
           <div>
             <img class="img-thumbnail" src="{{user_db.avatar_url_size(170)}}" alt="Avatar of {{user_db.name}}">
           </div>
           <p class="help-block">
-            Change on
+            Изменить на
             <a href="//gravatar.com" target="_blank">Gravatar</a>
           </p>
         </div>
@@ -37,7 +37,7 @@
       <div class="col-md-6 col-sm-9">
         <div class="controls">
           <button type="submit" class="btn btn-primary btn-block btn-loading" data-loading-text="Updating Profile..">
-            Update Profile
+            Обновить профиль
           </button>
         </div>
       </div>
