--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -28,7 +28,9 @@
 
   <body>
 <!--noindex-->
-    # include 'bit/header.html'
+    # block topnav
+        # include 'bit/header.html'
+    # endblock
     # include 'bit/breadcrumbs.html'
 <!--/noindex-->
     # include 'bit/announcement.html'
