--- a/main/templates/admin/config_update.html
+++ b/main/templates/admin/config_update.html
@@ -1,6 +1,10 @@
 # extends 'base.html'
 # import 'macro/forms.html' as forms
 
+# block topnav
+   # include 'admin/top_bar.html'
+# endblock
+
 # block content
   <div class="page-header">
     <h1>{{title}}</h1>
@@ -43,7 +47,7 @@
     </div>
     <hr>
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-12">
         <button type="submit" class="btn btn-primary btn-lg btn-block btn-loading" data-loading-text="Updating Config..">
           Update Config
         </button>
