--- a/main/apps/news/admin/templates/news/admin/post_new.html
+++ b/main/apps/news/admin/templates/news/admin/post_new.html
@@ -1,4 +1,8 @@
-{% extends 'admin.html' %}
+{% extends 'base.html' %}
+
+# block topnav
+   # include 'admin/top_bar.html'
+# endblock
 
 {% block head %}
     <link type="text/css" rel='stylesheet' href="/p/css/redactor.css">
