--- a/main/apps/file/admin/templates/file/admin/folder_fields.html
+++ b/main/apps/file/admin/templates/file/admin/folder_fields.html
@@ -1,6 +1,5 @@
-{{ form.csrf_token }}
-{% set form_field = form.title %}
-{% include 'bit/form_text_field.html' %}
+# import 'macro/forms.html' as forms
 
-{% set form_field = form.is_public %}
-{% include 'bit/form_text_field.html' %}
+{{ form.csrf_token }}
+{{forms.text_field(form.title)}}
+{{forms.text_field(form.is_public)}}
