blog editing fixed

--- a/main/apps/news/admin/templates/news/admin/post_fields.html
+++ b/main/apps/news/admin/templates/news/admin/post_fields.html
@@ -3,7 +3,7 @@
 {{form.csrf_token}}
 {{forms.text_field(form.created)}}
 {{forms.text_field(form.title, autofocus=True)}}
-{{forms.text_field(form.is_public)}}
+{{forms.checkbox_field(form.is_public)}}
 {{forms.text_field(form.tags)}}
-{{forms.textarea_field(form.short_text)}}
-{{forms.textarea_field(form.text)}}
+{{forms.redactor_field(form.short_text)}}
+{{forms.redactor_field(form.text, rows=10)}}
