--- a/main/apps/news/admin/templates/news/admin/post_new.html
+++ b/main/apps/news/admin/templates/news/admin/post_new.html
@@ -16,7 +16,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="span12">
+    <div class="col-md-8">
         <h1 class="page-header">Добавление поста</h1>
         <form method="POST">
             {% include 'news/admin/post_fields.html' %}
