--- a/main/templates/macro/forms.html
+++ b/main/templates/macro/forms.html
@@ -83,6 +83,15 @@
   </div>
 # endmacro
 
+# macro redactor_field(field, rows=4)
+  <div class="form-group {{'has-error' if field.errors}}">
+    {{field.label(class='control-label')}}
+    {{field(class='form-control redactor', rows=rows, **kwargs)}}
+    {{field_errors(field)}}
+    {{field_description(field)}}
+  </div>
+# endmacro
+
 
 # macro checkbox_field(field)
   <div class="checkbox {{'has-error' if field.errors}}">
